--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -6,67 +6,69 @@
 
 {% endblock %}
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/suggestions.css' %}" >
+  <link rel="stylesheet" href="{% static 'css/suggestions.css' %}">
 {% endblock %}
 
 
 {% block heading_inner %}Suggestions
-    <div class="btn-group">
-        <a href="{% url 'suggestions:list' %}"
-           class="btn {% if not completed_list %}btn-primary{% else %}btn-default{% endif %}">Active</a>
-        <a href="{% url 'suggestions:list_completed' %}"
-           class="btn {% if completed_list %}btn-primary{% else %}btn-default{% endif %}">Completed</a>
-    </div>
-    <br><small>You've voted {{ votes_this_semester }} times this semester</small>
+  <div class="btn-group">
+    <a href="{% url 'suggestions:list' %}"
+       class="btn {% if not completed_list %}btn-primary{% else %}btn-default{% endif %}">Active</a>
+    <a href="{% url 'suggestions:list_completed' %}"
+       class="btn {% if completed_list %}btn-primary{% else %}btn-default{% endif %}">Completed</a>
+  </div>
+  <br>
+  <small>You've voted {{ votes_this_semester }} times this semester</small>
 {% endblock %}
 
 {% block content %}
-    <br>
+  <br>
 
-{% if request.user.is_staff or semester.is_open and request.user.profile.has_current_course %}
-  <div class="panel panel-primary">
-    <div class="panel-heading" title="This section is only visible to you">
-      How to get XP by helping to improve the Hackerspace.
+  {% if request.user.is_staff or semester.is_open and request.user.profile.has_current_course %}
+    <div class="panel panel-primary">
+      <div class="panel-heading" title="This section is only visible to you">
+        How to get XP by helping to improve the Hackerspace.
+      </div>
+      <div class="panel-body">
+        <p>Look through the list of suggestions below and vote on those you like or dislike by
+          clicking the thumbs up/down buttons beside an active suggestion.</p>
+        <ul>
+          <a class="btn btn-primary pull-right"
+             href="{% url 'suggestions:create' %}">Make a Suggestion</a>
+          <li>For every {{ num_votes }} votes, you will automatically receive a {{ vote_badge.xp }} XP
+            {{ vote_badge.name }} Award.
+          </li>
+          <li>If you make a suggestion and it is approved, you will automatically receive a
+            {{ suggestion_badge.xp }} XP {{ suggestion_badge.name }} Award.
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="panel-body">
-      <p>Look through the list of suggestions below and vote on those you like or dislike by
-        clicking the thumbs up/down buttons beside an active suggestion.</p>
-      <ul>
-        <a class="btn btn-primary pull-right"
-           href="{% url 'suggestions:create' %}">Make a Suggestion</a>
-        <li>For every {{ num_votes }} votes, you will automatically receive a {{ vote_badge.xp }} XP
-          {{ vote_badge.name }} Award.
-        </li>
-        <li>If you make a suggestion and it is approved, you will automatically receive a
-          {{ suggestion_badge.xp }} XP {{ suggestion_badge.name }} Award.
-        </li>
-      </ul>
-    </div>
-  </div>
 
 
-<!-- TABLE -->
-  <table id="suggestions-table"
-         data-toggle="table"
-         data-id-field="id"
-         data-detail-view="true"
-         data-detail-formatter="detailFormatter"
-         data-sort-name="score"
-         data-sort-order="desc"
-  >
-    <thead>
-    <tr>
-      <th data-field="id" data-visible='false'>ID</th>
-      <th data-field="vote" data-class="text-center">{% if not completed_list %}Vote{% endif %}</th>
-      <th data-field="score" data-class="text-center" data-sortable='true'>Score</th>
-      <th data-field="suggestion">Suggestion</th>
-      <th data-field="status" data-sortable='true'>Status</th>
-      <th data-field="date" data-sortable='true' data-sorter="dateSorter">Date</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for object in object_list %}
-    <tr class="
+    <!-- TABLE -->
+    <table id="suggestions-table"
+           data-toggle="table"
+           data-id-field="id"
+           data-unique-id="id"
+           data-detail-view="true"
+           data-detail-formatter="detailFormatter"
+           data-sort-name="score"
+           data-sort-order="desc"
+    >
+      <thead>
+      <tr>
+        <th data-field="id" >ID</th>
+        <th data-field="vote" data-class="text-center">{% if not completed_list %}Vote{% endif %}</th>
+        <th data-field="score" data-class="text-center" data-sortable='true'>Score</th>
+        <th data-field="suggestion">Suggestion</th>
+        <th data-field="status" data-sortable='true'>Status</th>
+        <th data-field="date" data-sortable='true' data-sorter="dateSorter">Date</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for object in object_list %}
+        <tr class="
       {% if object.status == 1 %}row-info
       {% elif object.status == 2 %}
       {#    {% elif object.status == 3 %}panel-success#}
@@ -75,105 +77,106 @@
       {% else %}
       {% endif %}
     ">
-      <td>{{ object.id }}</td>
-      <!-- VOTING CELL -->
-      <td class="col-md-1 text-center">
-        {% if not completed_list and object.status == 2 %}
-          <a href="{% url 'suggestions:upvote' object.id %}" class="vote vote-up">
-            <i class="fa fa-lg fa-chevron-circle-up"></i></a>
-          <br>
-          <a href="{% url 'suggestions:downvote' object.id %}" class="vote vote-down">
-            <i class="fa fa-lg fa-chevron-circle-down"></i>
-          </a>
-        {% endif %}
-      </td>
-      <td class="col-md-1 text-center">{{ object.get_score }}</td>
-      <td class="col-md-6">{{object.title}}
-        {% if request.user.is_staff %}<br>
-        <small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
-                {{object.user}}</a> - {{object.user.profile}}</small>
-        {% elif request.user == object.user %}<br>
-        <small>(Your suggestion)</small>
-        {% endif %}
+          <td>{{ object.id }}</td>
+          <!-- VOTING CELL -->
+          <td class="col-md-1 text-center">
+            {% if not completed_list and object.status == 2 %}
+              <a href="{% url 'suggestions:upvote' object.id %}" class="vote vote-up">
+                <i class="fa fa-lg fa-chevron-circle-up"></i></a>
+              <br>
+              <a href="{% url 'suggestions:downvote' object.id %}" class="vote vote-down">
+                <i class="fa fa-lg fa-chevron-circle-down"></i>
+              </a>
+            {% endif %}
+          </td>
+          <td class="col-md-1 text-center">{{ object.get_score }}</td>
+          <td class="col-md-6">{{ object.title }}
+            {% if request.user.is_staff %}<br>
+              <small><a href="{% url 'profiles:profile_detail' object.user.profile.id %}">
+                {{ object.user }}</a> - {{ object.user.profile }}</small>
+            {% elif request.user == object.user %}<br>
+              <small>(Your suggestion)</small>
+            {% endif %}
 
-      </td>
-      <td class="col-md-2">
-        {% if object.status == 1 %}Awaiting Approval
-        {% elif object.status == 2 %}Approved
-        {% elif object.status == 3 %}Completed
-        {% elif object.status == 4 %}Unlikely
-        {% elif object.status == 5 %}Denied
-        {% endif %}
-      </td>
-      <td class="col-md-2">
-        <small>{{ object.status_timestamp|timesince }} ago</small>
-        <div style="display:none;">{{ object.status_timestamp|date:'Ymd' }}</div> <!-- for sorting -->
-      </td>
-    </tr>
+          </td>
+          <td class="col-md-2">
+            {% if object.status == 1 %}Awaiting Approval
+            {% elif object.status == 2 %}Approved
+            {% elif object.status == 3 %}Completed
+            {% elif object.status == 4 %}Unlikely
+            {% elif object.status == 5 %}Denied
+            {% endif %}
+          </td>
+          <td class="col-md-2">
+            <small>{{ object.status_timestamp|timesince }} ago</small>
+            <div style="display:none;">{{ object.status_timestamp|date:'Ymd' }}</div> <!-- for sorting -->
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+
+    {#  Content for detailed view #}
+    {% for object in object_list %}
+      <div style="display: none;" id="collapse{{ object.id }}">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-buttons">
+            {% if request.user.is_staff %}
+              <div class="pull-right">
+                <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
+                {% if object.status != 3 %}
+                  <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
+                {% endif %}
+                {% if object.status != 2 %}
+                  <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
+                {% endif %}
+                {% if object.status == 2 %}
+                  <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}"
+                     role="button">Complete</a>
+                {% endif %}
+              </div>
+            {% endif %}
+            <div>
+              {{ object.description }}
+            </div>
+          </li>
+
+          {% with object.get_comments as target_comments %}
+            {% if target_comments %}
+              <li class="list-group-item list-group-item-info">Suggestion Comments</li>
+              {% include "comments/comments.html" %}
+            {% endif %}
+          {% endwith %}
+
+          <li class="list-group-item list-group-item-info">Comment</li>
+          <li class="list-group-item">
+            {% if not request.user.profile.banned_from_comments %}
+              <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
+                {{ comment_form | crispy }}
+                <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment'/>
+              </form>
+            {% else %}
+              <p><i class="fa fa-ban text-danger"> </i>
+                Sorry Spammy McTrollson, you've been banned from commenting. If you would like this
+                privilege back, you can discuss it with your teacher.</p>
+            {% endif %}
+          </li>
+        </ul>
+
+      </div>  <!-- collapsible content -->
     {% endfor %}
-    </tbody>
-  </table>
-
-{#  Content for detailed view #}
-  {% for object in object_list %}
-  <div style="display: none;" id="collapse{{ object.id }}">
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-buttons">
-        {% if request.user.is_staff %}
-          <div class="pull-right">
-            <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>
-            {% if object.status != 3 %}
-              <a class="btn btn-danger" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>
-            {% endif %}
-            {% if object.status != 2 %}
-              <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>
-            {% endif %}
-            {% if object.status == 2 %}
-              <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}"
-                 role="button">Complete</a>
-            {% endif %}
-          </div>
-        {% endif %}
-        <div>
-          {{ object.description }}
-        </div>
-      </li>
-
-      {% with object.get_comments as target_comments %}
-        {% if target_comments %}
-          <li class="list-group-item list-group-item-info">Suggestion Comments</li>
-          {% include "comments/comments.html" %}
-        {% endif %}
-      {% endwith %}
-
-      <li class="list-group-item list-group-item-info">Comment</li>
-      <li class="list-group-item">
-        {% if not request.user.profile.banned_from_comments %}
-          <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}
-            {{ comment_form | crispy }}
-            <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment'/>
-          </form>
-        {% else %}
-          <p><i class="fa fa-ban text-danger"> </i>
-            Sorry Spammy McTrollson, you've been banned from commenting. If you would like this
-            privilege back, you can discuss it with your teacher.</p>
-        {% endif %}
-      </li>
-    </ul>
-
-  </div>  <!-- collapsible content -->
-  {% endfor %}
 
 
 
-{% else %}
-  {% if semester.is_open %}
-    <p>You need to join a course before voting or suggesting improvements.</p>
-    <p><a href="{% url 'courses:create' %}" class="btn btn-info" role="button">Join a Course</a></p>
   {% else %}
-    <p>The semester is currently closed. This semester runs from {{ semester.first_day }} to {{ semester.last_day }}</p>
+    {% if semester.is_open %}
+      <p>You need to join a course before voting or suggesting improvements.</p>
+      <p><a href="{% url 'courses:create' %}" class="btn btn-info" role="button">Join a Course</a></p>
+    {% else %}
+      <p>The semester is currently closed. This semester runs from {{ semester.first_day }}
+        to {{ semester.last_day }}</p>
+    {% endif %}
   {% endif %}
-{% endif %}
 {% endblock %}
 
 
@@ -185,6 +188,19 @@
       // https://jsfiddle.net/dabros/6ony6cs2/1/
       var $table = $('#suggestions-table');
 
+
+      {% if active_id %}
+      $(document).ready(function () {
+        /* SCROLL AND OPEN ACTIVE SUGGESTION */
+          var active_id={{ active_id }}
+          var $active_tr = $('tr[data-uniqueid='+ active_id + ']');
+          activateRow($active_tr);
+          scrollToRow($active_tr);
+      });
+      {% endif %}
+
+
+      /* CONVERT TO AN ACCORDIAN-STYLE TABLE */
       $table.on('expand-row.bs.table', function (e, index, row, $detail) {
           var detailContent = $("#collapse" + row.id).html();
 
@@ -196,34 +212,29 @@
       });
 
       $table.on("click-row.bs.table", function (e, row, $tr) {
-
           // prints Clicked on: table table-hover, no matter if you click on row or detail-icon
           //console.log("Clicked on: " + $(e.target).attr('class'), [e, row, $tr]);
 
           $table.find('tr').removeClass('row-active');
-          if ($tr.next().is('tr.detail-view') ) {
-              $tr.next().find('div.detail-container').slideUp(function() {
+          if ($tr.next().is('tr.detail-view')) {
+              $tr.next().find('div.detail-container').slideUp(function () {
                   // when animation complete, otherwise element will be deleted before animation
                   $table.bootstrapTable('collapseRow', $tr.data('index'));
               });
           } else {
-              /*$table.bootstrapTable('collapseRow', $expanded_tr.data('index'));*/
+            /*$table.bootstrapTable('collapseRow', $expanded_tr.data('index'));*/
               //$tr.addClass('row-active');
               //$table.bootstrapTable('expandRow', $tr.data('index'));
 
               var $detailContainer = $('div.detail-container');
               if ($detailContainer.length > 0) {
                   $detailContainer.slideUp(function () {
-                      $('html, body').animate({ scrollTop: $tr.offset().top - 50 });
+                      scrollToRow($tr);
                       var $expanded_tr = $detailContainer.parents('tr.detail-view').prev();
                       $table.bootstrapTable('collapseRow', $expanded_tr.data('index'));
                   });
-
               }
-
-              $tr.addClass('row-active');
-              $table.bootstrapTable('expandRow', $tr.data('index'));
-
+              activateRow($tr);
           }
       });
 
@@ -244,6 +255,16 @@
           if (dateA < dateB) return -1;
           return 0;
       }
+
+      function scrollToRow($tr) {
+         $('html, body').animate({scrollTop: $tr.offset().top - 60});
+      }
+
+      function activateRow($tr) {
+         $tr.addClass('row-active');
+         $table.bootstrapTable('expandRow', $tr.data('index'));
+      }
+
 
       // Stop links in table-accordian from triggering accordian opening and closing
       $(document).ready(function () {
