--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -55,6 +55,7 @@
            data-detail-formatter="detailFormatter"
            data-sort-name="score"
            data-sort-order="desc"
+           data-search="true"
     >
       <thead>
       <tr>
