update bootstrap-table src and tidy custom css

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -25,6 +25,7 @@
            data-show-columns='true'
            data-icons='icons'
            data-icons-prefix='fa'
+           data-classes="table table-no-bordered table-hover"
     >
         <thead>
         <tr>
