--- a/src/courses/templates/courses/mark_calculations2.html
+++ b/src/courses/templates/courses/mark_calculations2.html
@@ -1,5 +1,6 @@
 {% extends "courses/base.html" %}
 {% load crispy_forms_tags %}
+{% load jchart %}
 
 {% block heading_inner %}Mark Calculations{% endblock %}
 
@@ -98,42 +99,25 @@
         </li>
       </ul>
 
-      <p>Here are some pretty charts I made just for you, to help you visualize your progress so far:</p>
-{#      <div>#}
-{#        <ul class="nav nav-pills" role="tablist">#}
-{#          <li role="presentation" class="active"><a href="#progress" role="tab" data-toggle="tab">XP Progress</a></li>#}
-{#          <li role="presentation"><a href="#distribution" role="tab" data-toggle="tab">Mark Distribution</a></li>#}
-{#        </ul>#}
+      <p>Here' are some pretty charts I made just for you, to help you visualize your progress so far:</p>
+      <div>
+        <ul class="nav nav-pills" role="tablist">
+          <li role="presentation" class="active"><a href="#distribution" role="tab" data-toggle="tab">Mark Distribution</a></li>
+        </ul>
 
         <!-- Tab panes -->
-{#        <div class="tab-content">#}
-{#          <div role="tabpanel" class="tab-pane active" id="progress">#}
+
+          <div role="tabpanel" class="tab-pane active" id="distribution">
             <div class="well">
-              <div class="loading">
-                <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-                &nbsp;Calculating data for chart...
-              </div>
-              <canvas id="myChart" style="display: none; height: 400px;">
-                <!-- content will be set by js in xp_chart.html -->
-              </canvas>
-{#            </div>#}
-{#          </div>#}
-{##}
-{#          <div role="tabpanel" class="tab-pane" id="distribution">#}
-{#            <div class="well">#}
 {#              <div class="loading">#}
 {#                <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>#}
 {#                &nbsp;Calculating data for chart...#}
 {#              </div>#}
-{#              <canvas id="chart-mark-distribution" style="/*display: none;*/ height: 400px;">#}
-{#                <!-- content will be set by js in xp_chart.html -->#}
-{#              </canvas>#}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
-{##}
-{##}
-{#      </div>#}
+              {% render_chart 'courses:mark_distribution_chart' %}
+            </div>
+          </div>
+        </div>
+
 
       <h3>Chillax Line</h3>
       <p>{% if obj.semester.chillax_line_started %}
@@ -182,13 +166,13 @@
 {% endblock %}
 
 {% block js %}
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   <script>
       $(document).ready(function () {
           $('[data-toggle="popover"]').popover(
           )
       });
   </script>
-  {% include 'courses/chart_xp_progress.html' %}
-  {% include 'courses/chart_mark_distribution.html' %}
+{#  {% include 'courses/chart_mark_distribution.html' %}#}
 
 {% endblock %}
