--- a/src/courses/templates/courses/base.html
+++ b/src/courses/templates/courses/base.html
@@ -1,7 +1,8 @@
 {% extends "base_sidebar.html" %}
+{% load staticfiles %}
 
 {% block head_title %}Courses | {% endblock %}
-{% block head %}{% endblock %}
+{% block head %}<link rel="stylesheet" href="{% static 'courses/css/courses.css' %}">{% endblock %}
 
 {% block content_first %}{% endblock %}
 {% block heading %}<i class="fa fa-book pull-right"></i>{% block heading_inner %}{% endblock%}{% endblock %}
