XP chart always 400px height.  Histogram broken.  #106

--- a/src/courses/templates/courses/chart_xp_progress.html
+++ b/src/courses/templates/courses/chart_xp_progress.html
@@ -100,6 +100,10 @@
   generate_mark_lines(100)
 
   var options = {
+
+      responsive: true,
+      maintainAspectRatio: false,
+
       scales: {
 
           xAxes: [{
