--- a/src/suggestions/static/css/suggestions.css
+++ b/src/suggestions/static/css/suggestions.css
@@ -1,44 +1,22 @@
-#suggestions-table thead > tr > th.detail,
-#suggestions-table tbody > tr:not(.detail-view) > td:first-of-type {
-    display: none;
-}
-
-#suggestions-table thead > tr > th:nth-child(2),
-#suggestions-table tbody > tr:not(.detail-view) > td:nth-child(2) {
-    border-left: none !important;
-}
-
-.bootstrap-table .table > tbody > tr.detail-view > td {
-    padding: 0;
-}
-
-.bootstrap-table .table > tbody > tr.bg-primary:hover {
-    border-color: #337ab7;
-    background-color: #337ab7;
-}
-
-/*tr.expanded-row {*/
-    /*background-color: #337AB7;*/
-    /*color: #FFF !important;*/
-    /*text-shadow: 0px -1px 0px #286090;*/
-    /*background-image: linear-gradient(to bottom, #337AB7 0px, #2B669A 100%);*/
-    /*background-repeat: repeat-x;*/
-    /*border-color: #2B669A;*/
-
+/*#suggestions-table thead > tr > th.detail,*/
+/*#suggestions-table tbody > tr:not(.detail-view) > td:first-of-type {*/
+    /*display: none;*/
 /*}*/
-/*
-tr.detail-view,
-tr.detail-view td
-{
-    border-width: 1px;
-    border-color: #2B669A;
-}*/
-/*
-tr.list-group-item {
-    border-left: None;
-    border-right: None;
-}*/
 
-.bg-primary a {
-  color: #173652;
-}
+/*#suggestions-table thead > tr > th:nth-child(2),*/
+/*#suggestions-table tbody > tr:not(.detail-view) > td:nth-child(2) {*/
+    /*border-left: none !important;*/
+/*}*/
+
+/*.bootstrap-table .table > tbody > tr.detail-view > td {*/
+    /*padding: 0;*/
+/*}*/
+
+/*!*.bootstrap-table .table > tbody > tr.bg-primary:hover {*!*/
+    /*!*border-color: #337ab7;*!*/
+    /*!*background-color: #337ab7;*!*/
+/*!*}*!*/
+
+/*.bg-primary a {*/
+  /*color: #173652;*/
+/*}*/
