--- a/src/suggestions/templates/suggestions/suggestion_list.html
+++ b/src/suggestions/templates/suggestions/suggestion_list.html
@@ -6,7 +6,6 @@
 
 {% endblock %}
 {% block head %}
-  <link rel="stylesheet" href="{% static 'css/suggestions.css' %}">
 {% endblock %}
 
 
@@ -56,7 +55,7 @@
            data-sort-name="score"
            data-sort-order="desc"
            data-search="true"
-           data-classes="table table-no-bordered table-hover"
+           data-classes="table table-no-bordered table-hover table-accordian"
     >
       <thead>
       <tr>
