--- a/src/quest_manager/templates/quest_manager/flagged.html
+++ b/src/quest_manager/templates/quest_manager/flagged.html
@@ -1,12 +1,125 @@
 {% extends "quest_manager/base.html" %}
 {% load staticfiles %}
-{% block heading_inner %}Flagged{% endblock %}
+{% block heading_inner %}Flagged Submissions{% endblock %}
 
 {% block content %}
+
+ <!-- TABLE -->
+    <table id="flagged-table"
+           data-toggle="table"
+           data-id-field="id"
+           data-unique-id="id"
+           data-detail-view="true"
+           data-detail-formatter="detailFormatter"
+{#           data-sort-name="score"#}
+{#           data-sort-order="desc"#}
+           data-search="true"
+           data-classes="table table-no-bordered table-hover table-accordian"
+    >
+      <thead>
+      <tr>
+        <th data-field="id" data-visible="false">ID</th>
+        <th data-field="icon"></th>
+        <th data-field="quest" data-sortable='true'>Quest</th>
+        <th data-field="blocks" data-sortable='true'>Blocks</th>
+        <th data-field="user" data-sortable='true'>User</th>
+        <th data-field="date" data-sortable='true'>Date</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for s in submissions %}
+        <tr>
+          <td>{{ s.id }}</td>
+          <td><img class="img-responsive panel-title-img img-rounded" src="{{ s.quest.get_icon_url }}" alt="icon"/></td>
+          <td>{{ s.quest.name }}</td>
+          <td>{% for block in object.blocks %}{{ block }}{% if not forloop.last %}, {% endif %} {% endfor %}</td>
+          <td>{{ s.user }}</td>
+          <td>{% if s.is_approved %}
+                <small>{{s.time_approved|timesince}} ago</small>
+              {% elif s.is_awaiting_approval %}
+                <small>{{s.time_completed|timesince}} ago</small>
+              {% elif s.is_returned %}
+                <small>
+                  {% if s.time_returned %}
+                    {{s.time_returned|timesince}} ago
+                  {% else %}
+                    Unknown time ago
+                  {% endif %}
+                </small>
+              {% else %}
+                In progress
+              {% endif %}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+
+    {#  Content for detailed view #}
+    {% for s in submissions %}
+      <div style="display: none;" id="collapse{{ s.id }}">
+        {{ s.quest.name }}
+{#        <ul class="list-group">#}
+{#          <li class="list-group-item list-group-item-buttons">#}
+{#            {% if request.user.is_staff %}#}
+{#              <div class="pull-right">#}
+{#                <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>#}
+{#                {% if object.status != 3 %}#}
+{#                  <a class="btn btn-warning" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>#}
+{#                {% endif %}#}
+{#                {% if object.status != 2 %}#}
+{#                  <a class="btn btn-danger" href="{% url 'suggestions:delete' object.id %}" role="button">Delete</a>#}
+{#                  <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>#}
+{#                {% endif %}#}
+{#                {% if object.status == 2 %}#}
+{#                  <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}"#}
+{#                     role="button">Complete</a>#}
+{#                {% endif %}#}
+{#              </div>#}
+{#            {% endif %}#}
+{#            <div>#}
+{#              {{ object.description }}#}
+{#            </div>#}
+{#          </li>#}
+{##}
+{#          {% with object.get_comments as target_comments %}#}
+{#            {% if target_comments %}#}
+{#              <li class="list-group-item list-group-item-info">Suggestion Comments</li>#}
+{#              {% include "comments/comments.html" %}#}
+{#            {% endif %}#}
+{#          {% endwith %}#}
+{##}
+{#          <li class="list-group-item list-group-item-info">Comment</li>#}
+{#          <li class="list-group-item">#}
+{#            {% if not request.user.profile.banned_from_comments %}#}
+{#              <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}#}
+{#                {{ comment_form | crispy }}#}
+{#                <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment'/>#}
+{#              </form>#}
+{#            {% else %}#}
+{#              <p><i class="fa fa-ban text-danger"> </i>#}
+{#                Sorry Spammy McTrollson, you've been banned from commenting. If you would like this#}
+{#                privilege back, you can discuss it with your teacher.</p>#}
+{#            {% endif %}#}
+{#          </li>#}
+{#        </ul>#}
+
+      </div>  <!-- collapsible content -->
+    {% endfor %}
+
 
 
 {% endblock %}
 
 {% block js %}
+
   <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
+
+  <script>
+      // https://jsfiddle.net/dabros/6ony6cs2/1/
+      var active_id={{ active_id|default_if_none:"null" }}
+      var $table = $('#flagged-table');
+  </script>
+
+  <script src="{% static 'js/bootstrap-table-accordion.js' %}"></script>
+
 {% endblock %}
