--- a/src/quest_manager/templates/quest_manager/flagged.html
+++ b/src/quest_manager/templates/quest_manager/flagged.html
@@ -57,51 +57,7 @@
     {#  Content for detailed view #}
     {% for s in submissions %}
       <div style="display: none;" id="collapse{{ s.id }}">
-        {{ s.quest.name }}
-{#        <ul class="list-group">#}
-{#          <li class="list-group-item list-group-item-buttons">#}
-{#            {% if request.user.is_staff %}#}
-{#              <div class="pull-right">#}
-{#                <a class="btn btn-info" href="{% url 'suggestions:edit' object.id %}" role="button">Edit</a>#}
-{#                {% if object.status != 3 %}#}
-{#                  <a class="btn btn-warning" href="{% url 'suggestions:reject' object.id %}" role="button">Reject</a>#}
-{#                {% endif %}#}
-{#                {% if object.status != 2 %}#}
-{#                  <a class="btn btn-danger" href="{% url 'suggestions:delete' object.id %}" role="button">Delete</a>#}
-{#                  <a class="btn btn-success" href="{% url 'suggestions:approve' object.id %}" role="button">Approve</a>#}
-{#                {% endif %}#}
-{#                {% if object.status == 2 %}#}
-{#                  <a class="btn btn-success" href="{% url 'suggestions:complete' object.id %}"#}
-{#                     role="button">Complete</a>#}
-{#                {% endif %}#}
-{#              </div>#}
-{#            {% endif %}#}
-{#            <div>#}
-{#              {{ object.description }}#}
-{#            </div>#}
-{#          </li>#}
-{##}
-{#          {% with object.get_comments as target_comments %}#}
-{#            {% if target_comments %}#}
-{#              <li class="list-group-item list-group-item-info">Suggestion Comments</li>#}
-{#              {% include "comments/comments.html" %}#}
-{#            {% endif %}#}
-{#          {% endwith %}#}
-{##}
-{#          <li class="list-group-item list-group-item-info">Comment</li>#}
-{#          <li class="list-group-item">#}
-{#            {% if not request.user.profile.banned_from_comments %}#}
-{#              <form method="POST" action="{% url 'suggestions:comment' object.id %}">{% csrf_token %}#}
-{#                {{ comment_form | crispy }}#}
-{#                <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment'/>#}
-{#              </form>#}
-{#            {% else %}#}
-{#              <p><i class="fa fa-ban text-danger"> </i>#}
-{#                Sorry Spammy McTrollson, you've been banned from commenting. If you would like this#}
-{#                privilege back, you can discuss it with your teacher.</p>#}
-{#            {% endif %}#}
-{#          </li>#}
-{#        </ul>#}
+        {% include "quest_manager/preview_content_approvals.html" %}
 
       </div>  <!-- collapsible content -->
     {% endfor %}
