--- a/src/quest_manager/templates/quest_manager/flagged.html
+++ b/src/quest_manager/templates/quest_manager/flagged.html
@@ -32,13 +32,17 @@
           <td>{{ s.id }}</td>
           <td><img class="img-responsive panel-title-img img-rounded" src="{{ s.quest.get_icon_url }}" alt="icon"/></td>
           <td>{{ s.quest.name }}</td>
-          <td>{% for block in object.blocks %}{{ block }}{% if not forloop.last %}, {% endif %} {% endfor %}</td>
-          <td>{{ s.user }}</td>
+          <td>{% for block in s.user.profile.blocks %}{{ block }}{% if not forloop.last %}, {% endif %} {% endfor %}</td>
+          <td>{{ s.user }}<br />
+              <small>{{ s.user.profile.preferred_full_name }}</small></td>
           <td>{% if s.is_approved %}
+                Approved<br>
                 <small>{{s.time_approved|timesince}} ago</small>
               {% elif s.is_awaiting_approval %}
+                Awaiting Approval<br>
                 <small>{{s.time_completed|timesince}} ago</small>
               {% elif s.is_returned %}
+                Returned<br>
                 <small>
                   {% if s.time_returned %}
                     {{s.time_returned|timesince}} ago
@@ -57,8 +61,20 @@
     {#  Content for detailed view #}
     {% for s in submissions %}
       <div style="display: none;" id="collapse{{ s.id }}">
-        {% include "quest_manager/preview_content_approvals.html" %}
-
+        <ul id="preview-content-{{s.id}}" class="list-group">
+          <li class="list-group-item list-group-item">
+            <div class="clearfix">
+              <a class="btn btn-default pull-right" href="{% url 'quests:unflag' s.id %}">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-flag-o fa-stack-1x"></i>
+                  <i class="fa fa-ban fa-stack-2x text-danger"></i>
+                </span>
+                Unflag
+              </a>
+            </div>
+          </li>
+          {% include "quest_manager/preview_content_approvals.html" %}
+        </ul>
       </div>  <!-- collapsible content -->
     {% endfor %}
 
