--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -91,9 +91,21 @@
                 <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
                 <a class="btn btn-warning" data-target="#quick_reply{{s.id}}" id= "btn_quick_text{{s.id}}" role="button"
                   title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
-                <a class="pull-right btn btn-default" href="{% url 'quests:skip' s.id %}"
-                  title="Do not grant XP for this quest (or badges resulting) but mark as complete."
-                  role="button">Skip</a>
+
+              <div class="dropdown pull-right">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu{{ s.id }}"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  More...
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu{{ s.id }}">
+                  <li><a href="{% url 'quests:skip' s.id %}"
+                    title="Do not grant XP for this quest (or badges resulting) but mark as complete.">Skip</a></li>
+                  <li><a href="{% url 'quests:flag' s.id %}"
+                    title="Flag this quest for future follow up.  It will appear in your flagged submissions list.
+                           This does not leave a comment or approve the quest.">Flag</a></li>
+                </ul>
+              </div>
             </div>
           </form>
         </li>
