--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -44,8 +44,7 @@
                        aria-expanded="false">Admin <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <!-- <li class="dropdown-header">Content</li> -->
-                        <li><a title="This may take a few moments..."
-                                href="{% url 'djcytoscape:regenerate_all' %}">Refresh all Quest Maps</a></li>
+                        <li><a href="{% url 'quests:flagged' %}">Flagged Submissions</a></li>
                         <li><a title="This may take a few moments..."
                                 href="{% url 'profiles:recalculate_xp_current' %}">
                           Recalculate XP for all current users</a></li>
