--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -55,14 +55,14 @@
         {% if courses %}
           {% for course in courses %}
             {% if course.semester.active %}
-              <div class="pull-right"> {{object.xp_per_course|floatformat:0}} | 1000</div>
+              <div class="pull-right"> {{xp_per_course|floatformat:0}} | 1000</div>
               <div>
                   {{course.course}} {{course.grade}}
               </div>
-              <div class="progress progress-xp"><!--&nbsp; {% widthratio object.xp_per_course 1000 100 %}&#37;-->
-                <div class="progress-bar" role="progressbar" aria-valuenow="{{object.xp_per_course}}" aria-valuemin="0" aria-valuemax="1000"
-                    style="width: {% widthratio object.xp_per_course 1000 100 %}%;">
-                  <span class="sr-only">{% widthratio object.xp_per_course 1000 100 %}% Complete</span>
+              <div class="progress progress-xp"><!--&nbsp; {% widthratio xp_per_course 1000 100 %}&#37;-->
+                <div class="progress-bar" role="progressbar" aria-valuenow="{{xp_per_course}}" aria-valuemin="0" aria-valuemax="1000"
+                    style="width: {% widthratio xp_per_course 1000 100 %}%;">
+                  <span class="sr-only">{% widthratio xp_per_course 1000 100 %}% Complete</span>
                 </div>
               </div>
             {% endif %}
