--- a/src/quest_manager/templates/quest_manager/quest_form.html
+++ b/src/quest_manager/templates/quest_manager/quest_form.html
@@ -15,7 +15,9 @@
 <form action="{{ action_value }}" enctype="multipart/form-data" method="post">{% csrf_token %}
   <a href="{% url 'quests:quests' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
-  <a href="/admin/quest_manager/quest/{{object.id}}" role="button" class="btn btn-default">via Admin</a>
+  <a href="/admin/quest_manager/quest/{{object.id}}"
+     title="This is required to edit prerequisites"
+     role="button" class="btn btn-default">via Admin</a>
   {{ form|crispy }}
   <a href="{% url 'quests:quests' %}" role="button" class="btn btn-danger">Cancel</a>
   <input type="submit" value="{{ submit_btn_value }}" class="btn btn-success" />
