--- a/src/quest_manager/templates/quest_manager/quest_approval.html
+++ b/src/quest_manager/templates/quest_manager/quest_approval.html
@@ -9,14 +9,14 @@
 {% extends "quest_manager/base.html" %}
 {% load crispy_forms_tags %}
 {% block heading_inner %}{{ heading }}
-{#    {% if submitted_tab_active %}#}
-{#    <div class="btn-group">#}
-{#        <a href="{% url 'quests:submitted' %}"#}
-{#           class="btn {% if current_teacher_only %}btn-primary{% else %}btn-default{% endif %}">My blocks</a>#}
-{#        <a href="{% url 'quests:submitted_all' %}"#}
-{#           class="btn {% if not current_teacher_only %}btn-primary{% else %}btn-default{% endif %}">All</a>#}
-{#    </div>#}
-{#    {% endif %}#}
+    {% if submitted_tab_active %}
+    <div class="btn-group">
+        <a href="{% url 'quests:submitted' %}"
+           class="btn {% if current_teacher_only %}btn-primary{% else %}btn-default{% endif %}">My blocks</a>
+        <a href="{% url 'quests:submitted_all' %}"
+           class="btn {% if not current_teacher_only %}btn-primary{% else %}btn-default{% endif %}">All</a>
+    </div>
+    {% endif %}
     {% if not past_approvals_all == None %}
       <div class="btn-group">
         <a href="{% url 'quests:approved_for_quest' quest.id %}"
