--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -20,6 +20,23 @@
     padding-right: 5px !important;
 }
 
+.fullscreen {
+    position:fixed !important;
+    top:0 !important;
+    left:0 !important;
+    width:100% !important;
+    height:100% !important;
+    z-index:8999 !important;
+    background-color: white !important;
+}
+
+.fullscreen-toggle {
+    position: fixed !important;
+    top: 5px !important;
+    right: 5px !important;
+    z-index:9000 !important;
+}
+
 /*
 .navbar-packed-listitem:first-of-type > a{
  padding-left: 10px !important;
