--- a/src/badges/templates/badges/assertion_confirm_delete.html
+++ b/src/badges/templates/badges/assertion_confirm_delete.html
@@ -10,7 +10,7 @@
     <p>Achievement: {{object}}</p>
     <p>User: {{object.user}}</p>
   </div>
-  <a href="{% url 'profiles:profile_detail' object.user.id %}" role="button" class="btn btn-info">Cancel</a>
+  <a href="{% url 'profiles:profile_detail' object.user.profile.id %}" role="button" class="btn btn-info">Cancel</a>
   <input type="submit" value="Revoke" class="btn btn-danger" />
 </form>
 {% endblock %}
