--- a/src/quest_manager/templates/quest_manager/preview_content_quests_avail.html
+++ b/src/quest_manager/templates/quest_manager/preview_content_quests_avail.html
@@ -1,6 +1,6 @@
 {% include "quest_manager/buttons.html" %}
 {{q.short_description|safe}}
-{% if request.user.is_staff %}
+{% if request.user.is_staff or request.user == q.editor %}
   <hr />
   <div class="row">
     <div class="col-sm-6">
