--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -4,6 +4,7 @@
     > in progress (tab_quests_submission.html)
     > completed (tab_quests_submission.html)
     > past courses (tab_quests_submission.html)
+    > drafts (tab_quests_available.html)
 -->
 
 {% extends "quest_manager/base.html" %}
@@ -11,7 +12,7 @@
 
 {% block heading_inner %} {{ heading }}
   {% if request.user.is_staff or request.user.profile.is_TA %}
-    <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button">New</a>
+    <a class="btn btn-primary" href="{% url 'quests:quest_create' %}" role="button"><i class="fa fa-plus-circle"></i> Create</a>
   {% endif %}
   {% if available_tab_active and remove_hidden and request.user.profile.hidden_quests and request.user.profile.has_current_course %}
     <a class="btn btn-default" href="{% url 'quests:available_all' %}" role="button">
