grade transition complete? #145

--- a/src/courses/templates/courses/mark_calculations.html
+++ b/src/courses/templates/courses/mark_calculations.html
@@ -25,7 +25,7 @@
         {% for course in courses %}
           <tr>
             <td>{{ course.block }} Block</td>
-            <td>{{ course.course }} {{ course.grade }}</td>
+            <td>{{ course.course }} {{ course.grade_fk }}</td>
             <td><strong>{{ course.user.profile.mark|floatformat }}%</strong></td>
           </tr>
         {% endfor %}
