--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -57,7 +57,7 @@
             {% if course.semester.active %}
               <div class="pull-right"> {{xp_per_course|floatformat:0}} | 1000</div>
               <div>
-                  {{course.course}} {{course.grade}}
+                  {{course.course}} {{course.grade_fk}}
               </div>
               <div class="progress progress-xp"><!--&nbsp; {% widthratio xp_per_course 1000 100 %}&#37;-->
                 <div class="progress-bar" role="progressbar" aria-valuenow="{{xp_per_course}}" aria-valuemin="0" aria-valuemax="1000"
@@ -106,7 +106,7 @@
          {% if courses %}
              {% for course in courses %}
                <li class="list-group-item">
-                 {{course.course}} {{course.grade}}
+                 {{course.course}} {{course.grade_fk}}
                  {% if request.user.is_staff %}
                    (<a href="/admin/courses/coursestudent/{{course.id}}/">edit</a>)
                  {% endif %}
@@ -126,7 +126,7 @@
          {% if courses_old %}
              {% for course in courses_old %}
                <li class="list-group-item text-muted">
-                 {{course.course}} {{course.grade}}
+                 {{course.course}} {{course.grade_fk}}
                  {% if request.user.is_staff %}
                    (<a href="/admin/courses/coursestudent/{{course.id}}/">edit</a>)
                  {% endif %}
