popover width; typo

--- a/src/static_in_project/static_root/css/custom_common.css
+++ b/src/static_in_project/static_root/css/custom_common.css
@@ -249,7 +249,7 @@ ol > ol > ol {
 }
 
 .popover {
-    width: 400px;
+    max-width: 400px; /* Is this still required? What was this for? */
     /*width: auto;*/
 }
 
